--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,37 @@
-baseURL = "http://example.org/"
+baseurl = "http://example.org"
+title = "Meal Prep App"
+theme = "dimension"
 languageCode = "en-us"
-title = "Aaron Cordova"
+defaultContentLanguage = "en"
+enableRobotsTXT = true
 
-[Params]
-  Author = "Aaron Cordova"
+[params]
+  title = "Meal Prep"
+  logo = "fa-diamond"
+  copyright = "Meal Prep"
+
+[[params.social]]
+  medium = "twitter"
+  icon = "twitter"
+  link = "#"
+
+[[params.social]]
+  medium = "facebook"
+  icon = "facebook"
+  link = "#"
+
+[[params.social]]
+  medium = "instagram"
+  icon = "instagram"
+  link = "#"
+
+[[params.social]]
+  medium = "github"
+  icon = "github"
+  link = "#"
+
+[languages]
+[languages.en]
+languageName = "English"
+weight = 1
+title = "Meal Prep"
