Adding background and new icon

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ enableRobotsTXT = true
 
 [params]
   title = "Meal Prep"
-  logo = "fa-diamond"
+  logo = "fa-cutlery"
   copyright = "Meal Prep"
 
 [[params.social]]
