--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ theme = "dimension"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 enableRobotsTXT = true
+canonifyURLs = true
 
 [params]
   title = "Meal Prep"
