--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://505aaron.github.io/MealPlanPage/"
+baseurl = "https://505aaron.github.io/MealPrep/"
 title = "Meal Prep App"
 theme = "dimension"
 languageCode = "en-us"
